# AI_Advent_Challenge_with_Love

./: .gitignore  FEATURE_TRANSFER_SUMMARY.md  README.md
01/: AI_SETTINGS.md  (+7 more)
day-15-environment/mcp-servers/: FILEOPS_IMPLEMENTATION.md  FILEOPS_SUMMARY.md  NEW_SERVERS.md  QUICKSTART.md  README.md  START_FILEOPS.md  TESTING.md  TESTING_WITH_AUTH.md  __init__.py  launcher.py  pyproject.toml  requirements.txt  test_fileops.sh  test_fileops_simple.py  test_sse_connection.sh  test_sse_debug.sh  test_sse_integration.sh  test_with_auth.sh  БЫСТРЫЙ_СТАРТ_С_ПАРОЛЕМ.md
day-15-environment/mcp-servers/AIAgentAnswers/: current_weather.txt
day-15-environment/mcp-servers/adb/: README.md  adb_client.py  config.py  main.py  tools.py
day-15-environment/mcp-servers/currency/: __init__.py  config.py  currency_client.py  main.py  tools.py
day-15-environment/mcp-servers/docker/: README.md  __init__.py  config.py  docker-compose.yml  docker_client.py  main.py  test_docker_mcp.sh  tools.py
day-15-environment/mcp-servers/fileops/: EXAMPLES.md  QUICKSTART.md  README.md  README_RU.md  __init__.py  config.py  file_client.py  main.py  tools.py
day-15-environment/mcp-servers/github/: __init__.py  config.py  github_client.py  main.py  tools.py
day-15-environment/mcp-servers/mcp_servers.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
day-15-environment/mcp-servers/shared/: __init__.py  mcp_protocol.py  models.py  sse_transport.py
day-15-environment/mcp-servers/telegram/: __init__.py  config.py  main.py  setup_session.py  telegram_client.py  tools.py
(+521 files in other folders)
