[project]
name = "mcp-servers"
version = "1.0.0"
description = "Collection of MCP (Model Context Protocol) servers"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "fastapi>=0.109.0",
    "uvicorn>=0.27.0",
    "httpx>=0.26.0",
]

[project.optional-dependencies]
telegram = ["telethon>=1.34.0"]
github = []  # uses httpx from core
weather = []  # uses httpx from core
all = ["telethon>=1.34.0"]

[project.scripts]
mcp = "launcher:main"
mcp-telegram = "telegram.main:main"
mcp-github = "github.main:main"
mcp-weather = "weather.main:main"
mcp-fileops = "fileops.main:main"

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["shared*", "telegram*", "github*", "weather*", "fileops*"]
